# LLM-tiral

./: README.md  inputs.txt  pyproject.toml
llm-sample/: aya-101.ipynb  elyza.ipynb  lang_chain_sample.py  llama2-13b-translator.ipynb  m2m100.ipynb  mbart-large.ipynb  plamo.ipynb  swallow.ipynb
