[tool.poetry]
name = "llm-sample"
version = "0.1.0"
description = ""
authors = ["shamada <shamada@jeol.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.2.0+cu118", source = "torch_cu118"}
transformers = "^4.37.2"
sentencepiece = "^0.1.99"
accelerate = "^0.27.2"
protobuf = "^4.25.3"
numpy = "^1.26.4"
langchain = "^0.1.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"
